--- a/index.html
+++ b/index.html
@@ -1,20 +1,17 @@
-<center>
-  ok
-</center>
-
+<br>
 video of floor damage <a href=https://youtu.be/2GQGXj_yeD4>https://youtu.be/2GQGXj_yeD4</a><br>
-
+<br>
 pictures of damage: <a href=http://imgur.com/a/2BYoSMZ>http://imgur.com/a/2BYoSMZ</a><br> and <a href=http://imgur.com/a/66PWumn >http://imgur.com/a/66PWumn </a><br>
-
-apartment
-
+<br>
+apartment<br>
+<br>
 walk-through video - <a href=https://youtu.be/M6IuYzwTsMs>https://youtu.be/M6IuYzwTsMs</a><br>
-
+<br>
 info / pictures - <a href=https://streeteasy.com/property/851269-riverwalk-place-11a>https://streeteasy.com/property/851269-riverwalk-place-11a</a><br>  
-
-______________________________________________________________________
-This site contains proprietary and confidential material for the sole use of the intended recipient.
-Any review, use, distribution or disclosure by others without the permission of the sender is strictly prohibited. 
+<br>
+______________________________________________________________________<br>
+This site contains proprietary and confidential material for the sole use of the intended recipient.<br>
+Any review, use, distribution or disclosure by others without the permission of the sender is strictly prohibited. <br>
 
 
 
